--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -89,6 +89,7 @@
         "This car is part of a collection and can be purchased with collection credits.": "Этот автомобиль является частью коллекции и может быть приобретен за кредиты коллекций",
         "This is a autoshow - here is collected information about all cars! Let's see": "Это автошоу - здесь собрана информация обо всех автомобилях! Давай посмотрим",
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
+        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "Time": "Время",
         "Total needed:": "Всего необходимо:",
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
@@ -101,7 +102,6 @@
         "You can go straight to the autoshow, just click on the car!": "Ты можешь сразу перейти в АВТОШОУ, просто кликнув на машину!",
         "You can mark the cars you have": "Можно отметить имеющиеся автомобили",
         "You can see the visual specs here": "Визуальные хар-ки можно посмотреть здесь",
-        "iNFO-ABOUT": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "text coming soon...": "текст в разработке..."
     }
 }
