--- a/Localisation/JA.json
+++ b/Localisation/JA.json
@@ -89,6 +89,7 @@
         "This car is part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
         "This is a autoshow - here is collected information about all cars! Let's see": "This is a autoshow - here is collected information about all cars! Let's see",
         "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
+        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
         "Time": "Time",
         "Total needed:": "Total needed:",
         "UNRESTORED": "UNRESTORED",
@@ -101,7 +102,6 @@
         "You can go straight to the autoshow, just click on the car!": "You can go straight to the autoshow, just click on the car!",
         "You can mark the cars you have": "You can mark the cars you have",
         "You can see the visual specs here": "You can see the visual specs here",
-        "iNFO-ABOUT": "This project was created to automate and consolidate the necessary information for the game in one place!\r\n\r\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
         "text coming soon...": "text coming soon..."
     }
 }
