--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -6,102 +6,102 @@
         " sec": " sec",
         "...": "...",
         "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
+        "ABOUT": "ACERCA",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
-        "All the best races of the racers go here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
+        "All the best races of the racers go here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
+        "And finally, click to see additional information about the car": "Y por último, haz clic para ver información adicional sobre el auto.",
         "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Autoshow <color=#FFD540>PRO</color> mode  (technical info)",
         "Avatar": "Avatar",
         "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
+        "BEST DRIVER!": "Mejor Conductor!",
         "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating at the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (vision)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
-        "CREDITS": "CREDITS",
-        "Car name": "Car name",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
+        "BOSS CAR": "AUTO JEFE",
+        "Basic specs and the car rating at the tier": "Especificaciones básicas y calificación del vehículo por nivel",
+        "Best result and racer. Click to watch the best shift video!": "Mejor resultado y mejor piloto. Haz clic para ver el video.!",
+        "Boss time: ": "Tiempo del Jefe: ",
+        "CAR INFO (vision)": "INFORMACION DEL AUTO (vision)",
+        "CONFIRM CHANGES": "CONFIRMAR CAMBIOS",
+        "CONNECTION FAILED": "CONEXIÓN FALLIDA",
+        "CREATORS": "CREADORES",
+        "CREDITS": "CREDITOS",
+        "Car name": "Nombre del Auto",
+        "Check out the cost of each part, as well as the effects of the sixth parts!": "Consulta el costos de cada parte, así como las Piezas de Nivel 6!",
+        "City camera speed": "Velocidad de Camara",
+        "Click here to change the leaderboard!": "Haga clic aquí para cambiar la clasificación!",
+        "Click to change car type!": "Haga clic para cambiar el vehículo!",
         "DYNO:": "DYNO:",
-        "Driver": "Driver",
+        "Driver": "Conductor",
         "ELITE MAX": "ELITE MAX",
         "ELITE STOCK": "ELITE STOCK",
         "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "Failed download, check internet connection and restart app": "Failed download, check internet connection and restart app",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Gacha imports": "Gacha imports",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Get update!": "Get update!",
-        "Here you can see the best tuning settings": "Here you can see the best tuning settings",
-        "I already know": "I already know",
+        "Effects volume": "Efectos de volumen",
+        "FAVORITEs": "FAVORITOS",
+        "FINAL DRIVE": "CONDUCTOR FINAL",
+        "Failed download, check internet connection and restart app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Por fin podemos ver a los jugadores más rápidos y sus autos. ¡Acompáñame, te lo mostraré!!",
+        "Find out how many elite components you need to fully upgrade your car!": "Descubre cuántos componentes de élite necesitas para actualizar completamente tu auto!",
+        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
+        "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
+        "Gacha imports": "Importaciones",
+        "Get up-to-date information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
+        "Get update!": "Obtener actualización!",
+        "Here you can see the best tuning settings": "Aquí puedes ver las mejores configuraciones de ajuste.",
+        "I already know": "ya lo se",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHER": "OTHER",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
+        "Initializing the database...": "Inicializando la base de datos...",
+        "LOADING SCREEN": "PANTALLA DE CARGA",
+        "Let's choose the unrestored version": "Elijamos la versión sin restaurar",
+        "Let's go!": "¡Vamos!",
+        "Let's look at LEGENDS": "Veamos LEYENDAS",
+        "Let's look at this car": "Veamos este auto.",
+        "MILESTONE SEASON CAR": "AUTO DE TEMPORADA",
+        "Music clip": "Musica",
+        "Music volume": "Volumen",
+        "NEW": "NUEVO",
+        "NITROUS OXIDE": "ÓXIDO NITROSO",
+        "Number of upgrades and fusion parts": "Número de actualizaciones y piezas de fusión",
+        "OFF": "Apagar",
+        "ON": "Encender",
+        "OPEN CONFIGURATOR": "ABRIR CONFIGURADOR",
+        "OTHER": "OTROS",
+        "Petrol or electric car": "Auto de Gasolina o Eléctrico",
+        "Preparing the city...": "Preparando la ciudad...",
+        "Price of full car upgrades": "Precio de las mejoras completas del auto",
+        "Price of the car:": "Precio del auto:",
+        "Quit": "Quitar",
+        "RARE IMPORTS": "IMPORTACIONES RARAS",
+        "RELEASE iNFO": "INFORMACIÓN DE LANZAMIENTO",
+        "Rarity": "Rareza",
         "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
-        "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally a AUTOSHOW in city, let me show you around?": "There's finally a AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car could have won the teams championship. In the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "This car is part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is a autoshow - here is collected information about all cars! Let's see": "This is a autoshow - here is collected information about all cars! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
-        "Time": "Time",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to your favorites": "You can add important cars to your favorites",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "You can find the car you need by manufacturer or car groups. There is even a favorites section!",
-        "You can go straight to the autoshow, just click on the car!": "You can go straight to the autoshow, just click on the car!",
-        "You can mark the cars you have": "You can mark the cars you have",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "text coming soon...": "text coming soon..."
+        "Reset": "Reiniciar",
+        "Restart": "Reanudar",
+        "SEASON CARS": "AUTOS DE TEMPORADA",
+        "SETTINGS": "AJUSTES",
+        "Save": "Salvar",
+        "Some settings have been changed, save changes?": "Se han cambiado algunas configuraciones, guardar cambios?",
+        "Start": "Comenzar",
+        "TIRE PRESSURE": "PRESIÓN DE NEUMÁTICOS",
+        "There's finally a AUTOSHOW in city, let me show you around?": "Por fin hay un AUTOSHOW en la ciudad, déjame mostrarte los alrededores.",
+        "This car can be obtained by defeating the boss": "Este auto se puede obtener derrotando al jefe.",
+        "This car cannot be obtained anywhere": "Este auto no se puede conseguir en ningún lado.",
+        "This car could have won the teams championship. In the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
+        "This car is part of a collection and can be purchased with collection credits.": "Este auto es parte de una colección y se puede comprar con créditos de colección..",
+        "This is a autoshow - here is collected information about all cars! Let's see": "Esto es un autoshow: ¡aquí encontrarás información sobre todos los autos! Veamos.",
+        "This is the podium, the best cars and drivers show off here": "Este es el podio, los mejores autos y pilotos se lucen aquí",
+        "Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar.!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.": "¡Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.",
+        "Time": "Tiempo",
+        "Total needed:": "Total necesario:",
+        "UNRESTORED": "SIN RESTAURAR",
+        "UPGRADE DETAILED INFO": "INFORMACIÓN DETALLADA DE LA ACTUALIZACIÓN",
+        "Updating the database...": "Actualización de la base de datos...",
+        "WORLD RECORDS": "RÉCORDS MUNDIALES",
+        "WR CAR RATING": "WR CLASIFICACIÓN DEL AUTO",
+        "You can add important cars to your favorites": "Puedes agregar autos importantes a tus favoritos",
+        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "Puedes encontrar el auto que necesitas por fabricante o grupo de autos. Incluso hay una sección de favoritos.!",
+        "You can go straight to the autoshow, just click on the car!": "YPuedes ir directamente al autoshow, simplemente haz clic en el auto.!",
+        "You can mark the cars you have": "Puedes marcar los autos que tienes",
+        "You can see the visual specs here": "Puedes ver las especificaciones visuales aquí",
+        "text coming soon...": "texto próximamente..."
     }
 }
