--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -37,7 +37,7 @@
         "EXIT": "EXIT",
         "Effects volume": "Efectos de volumen",
         "FAVORITEs": "FAVORITOS",
-        "FINAL DRIVE": "CONDUCTOR FINAL",
+        "FINAL DRIVE": "TRANSMISIÓN",
         "Failed download, check internet connection and restart app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Por fin podemos ver a los jugadores más rápidos y sus autos. ¡Acompáñame, te lo mostraré!!",
         "Find out how many elite components you need to fully upgrade your car!": "Descubre cuántos componentes de élite necesitas para actualizar completamente tu auto!",
@@ -59,11 +59,11 @@
         "Music clip": "Musica",
         "Music volume": "Volumen",
         "NEW": "NUEVO",
-        "NITROUS OXIDE": "ÓXIDO NITROSO",
+        "NITROUS OXIDE": "NITRO",
         "Number of upgrades and fusion parts": "Número de actualizaciones y piezas de fusión",
         "OFF": "Apagar",
         "ON": "Encender",
-        "OPEN CONFIGURATOR": "ABRIR CONFIGURADOR",
+        "OPEN CONFIGURATOR": "ABRIR",
         "OTHER": "OTROS",
         "Petrol or electric car": "Auto de Gasolina o Eléctrico",
         "Preparing the city...": "Preparando la ciudad...",
@@ -81,7 +81,7 @@
         "Save": "Salvar",
         "Some settings have been changed, save changes?": "Se han cambiado algunas configuraciones, guardar cambios?",
         "Start": "Comenzar",
-        "TIRE PRESSURE": "PRESIÓN DE NEUMÁTICOS",
+        "TIRE PRESSURE": "NEUMÁTICOS",
         "There's finally a AUTOSHOW in city, let me show you around?": "Por fin hay un AUTOSHOW en la ciudad, déjame mostrarte los alrededores.",
         "This car can be obtained by defeating the boss": "Este auto se puede obtener derrotando al jefe.",
         "This car cannot be obtained anywhere": "Este auto no se puede conseguir en ningún lado.",
