--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -1,107 +1,107 @@
 {
     "TranslationsData": {
-        " (elite max)": " (elite max)",
-        " (unrestored)": " (unrestored)",
-        " records": " records",
-        " sec": " sec",
+        " (elite max)": " (精英满级)",
+        " (unrestored)": " (未修复)",
+        " records": " 纪录",
+        " sec": " 秒",
         "...": "...",
-        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE",
-        "ABOUT": "ABOUT",
-        "AUDIO": "AUDIO",
-        "AUTOSHOW": "AUTOSHOW",
-        "All the best races of the racers go here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
-        "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Autoshow <color=#FFD540>PRO</color> mode  (technical info)",
-        "Avatar": "Avatar",
-        "BACK": "BACK",
-        "BEST DRIVER!": "BEST DRIVER!",
-        "BEST:": "BEST:",
-        "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating at the tier": "Basic specs and the car rating at the tier",
-        "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
-        "Boss time: ": "Boss time: ",
-        "CAR INFO (vision)": "CAR INFO (vision)",
-        "CONFIRM CHANGES": "CONFIRM CHANGES",
-        "CONNECTION FAILED": "CONNECTION FAILED",
-        "CREATORS": "CREATORS",
-        "CREDITS": "CREDITS",
-        "Car name": "Car name",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Check out the cost of each part, as well as the effects of the sixth parts!",
-        "City camera speed": "City camera speed",
-        "Click here to change the leaderboard!": "Click here to change the leaderboard!",
-        "Click to change car type!": "Click to change car type!",
-        "DYNO:": "DYNO:",
-        "Driver": "Driver",
-        "ELITE MAX": "ELITE MAX",
-        "ELITE STOCK": "ELITE STOCK",
-        "EXIT": "EXIT",
-        "Effects volume": "Effects volume",
-        "FAVORITEs": "FAVORITEs",
-        "FINAL DRIVE": "FINAL DRIVE",
-        "Failed download, check internet connection and restart app": "Failed download, check internet connection and restart app",
-        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
-        "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
-        "Gacha imports": "Gacha imports",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
-        "Get update!": "Get update!",
-        "Here you can see the best tuning settings": "Here you can see the best tuning settings",
-        "I already know": "I already know",
-        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Initializing the database...",
-        "LOADING SCREEN": "LOADING SCREEN",
-        "Let's choose the unrestored version": "Let's choose the unrestored version",
-        "Let's go!": "Let's go!",
-        "Let's look at LEGENDS": "Let's look at LEGENDS",
-        "Let's look at this car": "Let's look at this car",
-        "MILESTONE SEASON CAR": "MILESTONE SEASON CAR",
-        "Music clip": "Music clip",
-        "Music volume": "Music volume",
-        "NEW": "NEW",
-        "NITROUS OXIDE": "NITROUS OXIDE",
-        "Number of upgrades and fusion parts": "Number of upgrades and fusion parts",
-        "OFF": "OFF",
-        "ON": "ON",
-        "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHER": "OTHER",
-        "Petrol or electric car": "Petrol or electric car",
-        "Preparing the city...": "Preparing the city...",
-        "Price of full car upgrades": "Price of full car upgrades",
-        "Price of the car:": "Price of the car:",
-        "Quit": "Quit",
-        "RARE IMPORTS": "RARE IMPORTS",
-        "RELEASE iNFO": "RELEASE iNFO",
-        "Rarity": "Rarity",
-        "Records": "Records",
-        "Reset": "Reset",
-        "Restart": "Restart",
-        "SEASON CARS": "SEASON CARS",
-        "SETTINGS": "SETTINGS",
-        "Save": "Save",
-        "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
-        "Start": "Start",
-        "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally a AUTOSHOW in city, let me show you around?": "There's finally a AUTOSHOW in city, let me show you around?",
-        "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
-        "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car could have won the teams championship. In the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "This car is part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is a autoshow - here is collected information about all cars! Let's see": "This is a autoshow - here is collected information about all cars! Let's see",
-        "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
-        "Time": "Time",
-        "Total needed:": "Total needed:",
-        "UNRESTORED": "UNRESTORED",
-        "UPGRADE DETAILED INFO": "UPGRADE DETAILED INFO",
-        "Updating the database...": "Updating the database...",
-        "WORLD RECORDS": "WORLD RECORDS",
-        "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to your favorites": "You can add important cars to your favorites",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "You can find the car you need by manufacturer or car groups. There is even a favorites section!",
-        "You can go straight to the autoshow, just click on the car!": "You can go straight to the autoshow, just click on the car!",
-        "You can mark the cars you have": "You can mark the cars you have",
-        "You can see the visual specs here": "You can see the visual specs here",
-        "text coming soon...": "text coming soon..."
+        "<color=orange>【CAUTION】</color> -    LARGE DOWNLOAD SIZE": "<color=orange>【注意】</color> -    下载量大",
+        "ABOUT": "关于",
+        "AUDIO": "音响",
+        "AUTOSHOW": "车展",
+        "All the best races of the racers go here! Let's see this hall of fame": "车手们的最佳赛事都在这里! 让我们看看这个名人堂",
+        "And finally, click to see additional information about the car": "最后，点击查看车辆的额外资讯",
+        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "车展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "Avatar": "头像",
+        "BACK": "返回",
+        "BEST DRIVER!": "最佳车手!",
+        "BEST:": "最佳:",
+        "BOSS CAR": "领袖车辆",
+        "Basic specs and the car rating at the tier": "等级内的车辆基本规格和积分",
+        "Best result and racer. Click to watch the best shift video!": "最佳成绩与车手。点击观看最佳换挡的视频!",
+        "Boss time: ": "领袖时间: ",
+        "CAR INFO (vision)": "车辆资讯 (自 Vision 资料库)",
+        "CONFIRM CHANGES": "确认更改",
+        "CONNECTION FAILED": "连线失败",
+        "CREATORS": "创建者",
+        "CREDITS": "特别鸣谢",
+        "Car name": "车名",
+        "Check out the cost of each part, as well as the effects of the sixth parts!": "检查各个零件的价格，以及第六级升级的作用！",
+        "City camera speed": "城市摄像机的速度",
+        "Click here to change the leaderboard!": "点击这里更换排行榜！",
+        "Click to change car type!": "点击更换车种！",
+        "DYNO:": "测功机:",
+        "Driver": "车手",
+        "ELITE MAX": "精英满级",
+        "ELITE STOCK": "精英原厂",
+        "EXIT": "离开",
+        "Effects volume": "音效声量",
+        "FAVORITEs": "最爱",
+        "FINAL DRIVE": "最终传动",
+        "Failed download, check internet connection and restart app": "下载失败，检查网络连接后重启应用",
+        "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我们终于可以查看最快玩家和他们的车辆。跟我来，我给你看看!",
+        "Find out how many elite components you need to fully upgrade your car!": "查看升满车辆需要多少精英元件!",
+        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "CSR<color=yellow>2</color>-HUB 需要下载数据: <color= #FFAA0D>{0}</color>, 请确认不是使用受限网络后确认下载程序",
+        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "为了确保正确运行需下载额外数据，请检查网络连接后重试",
+        "Gacha imports": "抽奖进口",
+        "Get up-to-date information on how many Legends components you need to restore your car!": "获取和修复传奇车辆所需的原件数量有关的最新消息!",
+        "Get update!": "获取更新！",
+        "Here you can see the best tuning settings": "你可以在这里查看最佳调节",
+        "I already know": "我已知晓",
+        "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "基础结构源自 ABS (@stasss125)\n资源源自 Nitro4CSR (@nitr04)\n\n也参与其中:\n- MAINTANERS\n- FREYCKSSON\n",
+        "Initializing the database...": "正在初始化数据库",
+        "LOADING SCREEN": "加载屏幕",
+        "Let's choose the unrestored version": "我们来选择未修复的版本",
+        "Let's go!": "我们出发!",
+        "Let's look at LEGENDS": "我们来看看传奇",
+        "Let's look at this car": "我们来看看这辆车",
+        "MILESTONE SEASON CAR": "赛季里程碑车辆",
+        "Music clip": "音乐曲子",
+        "Music volume": "音乐声量",
+        "NEW": "新",
+        "NITROUS OXIDE": "氮气加速",
+        "Number of upgrades and fusion parts": "升级及合成零件的数量",
+        "OFF": "关闭",
+        "ON": "开启",
+        "OPEN CONFIGURATOR": "开启配置器",
+        "OTHER": "其他",
+        "Petrol or electric car": "汽油或电动车",
+        "Preparing the city...": "正在准备城市中...",
+        "Price of full car upgrades": "满级的价格",
+        "Price of the car:": "车辆的价格:",
+        "Quit": "推出",
+        "RARE IMPORTS": "稀有进口",
+        "RELEASE iNFO": "推出资讯",
+        "Rarity": "稀有度",
+        "Records": "纪录",
+        "Reset": "重置",
+        "Restart": "重启",
+        "SEASON CARS": "赛季车辆",
+        "SETTINGS": "设置",
+        "Save": "保存",
+        "Some settings have been changed, save changes?": "一些设置已被更改，是否保存更改？",
+        "Start": "开始",
+        "TIRE PRESSURE": "轮胎气压",
+        "There's finally a AUTOSHOW in city, let me show you around?": "城市里终于有个车展了，要不要我带你看看？",
+        "This car can be obtained by defeating the boss": "这辆车可通过击败领袖获取",
+        "This car cannot be obtained anywhere": "这辆车无法获取",
+        "This car could have won the teams championship. In the following seasons:": "这辆车可以在以下赛季里赢取:",
+        "This car is part of a collection and can be purchased with collection credits.": "这辆车属于某个收藏的一部分，且可透过收藏积分购买",
+        "This is a autoshow - here is collected information about all cars! Let's see": "这是个车展 - 这里收着所有车辆的资讯! 我们来看看",
+        "This is the podium, the best cars and drivers show off here": "这里是颁奖台，最佳的车辆和车手都展示在这里",
+        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "这个计划是为了自动化和整顿整个游戏的必要资讯到一个集中点开发的!\n\n几乎所有应用的资源皆为 CSR2 所属，且是 NaturalMotion => Zynga => Take-Two Interactive 的财产。所使用的资源只用于给社群提供参考资讯，无其他用途。",
+        "Time": "时间",
+        "Total needed:": "总需:",
+        "UNRESTORED": "未修复",
+        "UPGRADE DETAILED INFO": "升级详细资讯",
+        "Updating the database...": "正在更新数据库...",
+        "WORLD RECORDS": "世界纪录",
+        "WR CAR RATING": "世界纪录的车辆积分",
+        "You can add important cars to your favorites": "你可以把重要的车辆加入最爱里",
+        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "你可以区分厂家或车种查寻车辆。甚至还有最爱的选项!",
+        "You can go straight to the autoshow, just click on the car!": "你可以直接前往车展，只需点击车辆!",
+        "You can mark the cars you have": "你可以标记已拥有的车辆",
+        "You can see the visual specs here": "你可以在这里查看外观规格",
+        "text coming soon...": "即将来临..."
     }
 }
