--- a/Localisation/ZH.json
+++ b/Localisation/ZH.json
@@ -44,12 +44,12 @@
         "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "CSR<color=yellow>2</color>-HUB 需要下载数据: <color= #FFAA0D>{0}</color>, 请确认不是使用受限网络后确认下载程序",
         "For the correct work it is necessary to download additional data, please check your internet connection and try again": "为了确保正确运行需下载额外数据，请检查网络连接后重试",
         "Gacha imports": "抽奖进口",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "获取和修复传奇车辆所需的原件数量有关的最新消息!",
+        "Get up-to-date information on how many Legends components you need to restore your car!": "获取和修复传奇车辆所需的元件数量有关的最新消息!",
         "Get update!": "获取更新！",
         "Here you can see the best tuning settings": "你可以在这里查看最佳调节",
         "I already know": "我已知晓",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "基础结构源自 ABS (@stasss125)\n资源源自 Nitro4CSR (@nitr04)\n\n也参与其中:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "正在初始化数据库",
+        "Initializing the database...": "正在初始化数据库...",
         "LOADING SCREEN": "加载屏幕",
         "Let's choose the unrestored version": "我们来选择未修复的版本",
         "Let's go!": "我们出发!",
@@ -69,7 +69,7 @@
         "Preparing the city...": "正在准备城市中...",
         "Price of full car upgrades": "满级的价格",
         "Price of the car:": "车辆的价格:",
-        "Quit": "推出",
+        "Quit": "退出",
         "RARE IMPORTS": "稀有进口",
         "RELEASE iNFO": "推出资讯",
         "Rarity": "稀有度",
