--- a/Localisation/ZH-TW.json
+++ b/Localisation/ZH-TW.json
@@ -9,24 +9,24 @@
         "ABOUT": "關于",
         "AUDIO": "音響",
         "AUTOSHOW": "車展",
-        "All the best races of the racers go here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
+        "All the best races of the racers are here! Let's see this hall of fame": "車手們的最佳賽事都在這裏! 讓我們看看這個名人堂",
         "And finally, click to see additional information about the car": "最後，點擊查看車輛的額外資訊",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "車展 <color=#FFD540>PRO</color> 模式  (technical info)",
         "Avatar": "頭像",
         "BACK": "返回",
         "BEST DRIVER!": "最佳車手!",
         "BEST:": "最佳:",
         "BOSS CAR": "領袖車輛",
-        "Basic specs and the car rating at the tier": "等級内的車輛基本規格和積分",
+        "Basic specs and the car rating of the tier": "等級内的車輛基本規格和積分",
         "Best result and racer. Click to watch the best shift video!": "最佳成績與車手。點擊觀看最佳換擋的視頻!",
         "Boss time: ": "領袖時間: ",
-        "CAR INFO (vision)": "車輛資訊 (自  Vision 資料庫)",
+        "CAR INFO (from Vision spreadsheet)": "車輛資訊 (自  Vision 資料庫)",
         "CONFIRM CHANGES": "確認更改",
         "CONNECTION FAILED": "連綫失敗",
         "CREATORS": "創建者",
         "CREDITS": "特別鳴謝",
         "Car name": "車名",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "檢查各個零件的價格，以及第六級升級的作用!",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "檢查各個零件的價格，以及第六級升級的作用!",
         "City camera speed": "城市攝像機的速度",
         "Click here to change the leaderboard!": "點擊這裏更換排行榜!",
         "Click to change car type!": "點擊更換車種!",
@@ -36,20 +36,20 @@
         "ELITE STOCK": "精英原廠",
         "EXIT": "離開",
         "Effects volume": "音效聲量",
-        "FAVORITEs": "最愛",
+        "FAVORITES": "最愛",
         "FINAL DRIVE": "最終傳動",
-        "Failed download, check internet connection and restart app": "下載失敗，檢查網絡連接后重啓應用",
+        "Download failed, check your internet connection and restart the app": "下載失敗，檢查網絡連接后重啓應用",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "我們終於可以查看最快玩家和他們的車輛。跟我來，我給你看看!",
         "Find out how many elite components you need to fully upgrade your car!": "查看升滿車輛需要多少精英元件!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB 需要下載數據: <color= #FFAA0D>{0}</color>，請確認不是使用受限網絡后確認下載程序",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "爲了確保正確運行需下載額外數據，請檢查網絡連接后重試",
         "Gacha imports": "抽獎進口",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
+        "Get updated information on how many Legends components you need to restore your car!": "獲取和修復傳奇車輛所需的元件數量有關的最新消息!",
         "Get update!": "獲取更新!",
-        "Here you can see the best tuning settings": "你可以在這裏查看最佳調節",
-        "I already know": "我已知曉",
+        "You can see the best tuning settings here": "你可以在這裏查看最佳調節",
+        "I know it already": "我已知曉",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "基礎結構源自 ABS (@stasss125)\n資源源自 Nitro4CSR (@nitr04)\n\n也參與其中:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "正在初始化數據庫...",
+        "Initializing database...": "正在初始化數據庫...",
         "LOADING SCREEN": "加載屏幕",
         "Let's choose the unrestored version": "我們來選擇未修復的版本",
         "Let's go!": "我們出發!",
@@ -64,7 +64,7 @@
         "OFF": "關閉",
         "ON": "開啓",
         "OPEN CONFIGURATOR": "開啓配置器",
-        "OTHER": "其他",
+        "OTHERS": "其他",
         "Petrol or electric car": "汽油或電動車",
         "Preparing the city...": "正在准備城市中...",
         "Price of full car upgrades": "滿級的價格",
@@ -82,14 +82,14 @@
         "Some settings have been changed, save changes?": "一些設置已被更改，是否保存更改？",
         "Start": "開始",
         "TIRE PRESSURE": "輪胎氣壓",
-        "There's finally a AUTOSHOW in city, let me show you around?": "城市裏終於有個車展了，要不要我帶你看看？",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "城市裏終於有個車展了，要不要我帶你看看？",
         "This car can be obtained by defeating the boss": "這輛車可通過擊敗領袖獲取",
         "This car cannot be obtained anywhere": "這輛車無法獲取",
-        "This car could have won the teams championship. In the following seasons:": "這輛車可以在以下賽季裏贏取:",
-        "This car is part of a collection and can be purchased with collection credits.": "這輛車屬於某個收藏的一部分，且可透過收藏積分購買",
-        "This is a autoshow - here is collected information about all cars! Let's see": "這是個車展 - 這裏收著所有車輛的資訊！ 我們來看看",
+        "You could have won this car in the following seasons:": "這輛車可以在以下賽季裏贏取:",
+        "This car is a part of a collection and can be purchased with collection credits.": "這輛車屬於某個收藏的一部分，且可透過收藏積分購買",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "這是個車展 - 這裏收著所有車輛的資訊！ 我們來看看",
         "This is the podium, the best cars and drivers show off here": "這裏是頒獎臺，最佳的車輛和車手都展示在這裏",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "這個計劃是爲了自動化和整頓整個游戲的必要資訊到一個集中點開發的!\n\n幾乎所有應用的資源皆爲 CSR2 所屬，且是 NaturalMotion => Zynga => Take-Two Interactive 的財產。 所使用的資源只用於給社群提供參考資訊，無其他用途",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "這個計劃是爲了自動化和整頓整個游戲的必要資訊到一個集中點開發的!\n\n幾乎所有應用的資源皆爲 CSR2 所屬，且是 NaturalMotion => Zynga => Take-Two Interactive 的財產。 所使用的資源只用於給社群提供參考資訊，無其他用途",
         "Time": "時間",
         "Total needed:": "總需:",
         "UNRESTORED": "未修復",
@@ -97,10 +97,10 @@
         "Updating the database...": "正在更新數據庫...",
         "WORLD RECORDS": "世界紀錄",
         "WR CAR RATING": "世界紀錄的車輛積分",
-        "You can add important cars to your favorites": "你可以把重要的車輛加入最愛裏",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "你可以區分廠家或車種查尋車輛。甚至還有最愛的選項！",
-        "You can go straight to the autoshow, just click on the car!": "你可以直接前往車展，只需點擊車輛！",
-        "You can mark the cars you have": "你可以標記已擁有的車輛",
+        "You can add important cars to favorites": "你可以把重要的車輛加入最愛裏",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "你可以區分廠家或車種查尋車輛。甚至還有最愛的選項！",
+        "You can go straight to the AUTOSHOW, just click on the car!": "你可以直接前往車展，只需點擊車輛！",
+        "You can mark the cars you owned": "你可以標記已擁有的車輛",
         "You can see the visual specs here": "你可以在這裏查看外觀規格",
         "text coming soon...": "即將來臨..."
     }
