--- a/Localisation/DE.json
+++ b/Localisation/DE.json
@@ -9,24 +9,24 @@
         "ABOUT": "ABOUT",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
-        "All the best races of the racers go here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
+        "All the best races of the racers are here! Let's see this hall of fame": "All the best races of the racers go here! Let's see this hall of fame",
         "And finally, click to see additional information about the car": "And finally, click to see additional information about the car",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Autoshow <color=#FFD540>PRO</color> mode  (technical info)",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "Avatar": "Avatar",
         "BACK": "BACK",
         "BEST DRIVER!": "BEST DRIVER!",
         "BEST:": "BEST:",
         "BOSS CAR": "BOSS CAR",
-        "Basic specs and the car rating at the tier": "Basic specs and the car rating at the tier",
+        "Basic specs and the car rating of the tier": "Basic specs and the car rating at the tier",
         "Best result and racer. Click to watch the best shift video!": "Best result and racer. Click to watch the best shift video!",
         "Boss time: ": "Boss time: ",
-        "CAR INFO (vision)": "CAR INFO (vision)",
+        "CAR INFO (from Vision spreadsheet)": "CAR INFO (vision)",
         "CONFIRM CHANGES": "CONFIRM CHANGES",
         "CONNECTION FAILED": "CONNECTION FAILED",
         "CREATORS": "CREATORS",
         "CREDITS": "CREDITS",
         "Car name": "Car name",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Check out the cost of each part, as well as the effects of the sixth parts!",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Check out the cost of each part, as well as the effects of the sixth parts!",
         "City camera speed": "City camera speed",
         "Click here to change the leaderboard!": "Click here to change the leaderboard!",
         "Click to change car type!": "Click to change car type!",
@@ -36,20 +36,20 @@
         "ELITE STOCK": "ELITE STOCK",
         "EXIT": "EXIT",
         "Effects volume": "Effects volume",
-        "FAVORITEs": "FAVORITEs",
+        "FAVORITES": "FAVORITEs",
         "FINAL DRIVE": "FINAL DRIVE",
-        "Failed download, check internet connection and restart app": "Failed download, check internet connection and restart app",
+        "Download failed, check your internet connection and restart the app": "Failed download, check internet connection and restart app",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Finally we can see the fastest players and their cars. Come with me, I'll show you!",
         "Find out how many elite components you need to fully upgrade your car!": "Find out how many elite components you need to fully upgrade your car!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "For the correct work it is necessary to download additional data, please check your internet connection and try again",
         "Gacha imports": "Gacha imports",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
+        "Get updated information on how many Legends components you need to restore your car!": "Get up-to-date information on how many Legends components you need to restore your car!",
         "Get update!": "Get update!",
-        "Here you can see the best tuning settings": "Here you can see the best tuning settings",
-        "I already know": "I already know",
+        "You can see the best tuning settings here": "Here you can see the best tuning settings",
+        "I know it already": "I already know",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Initializing the database...",
+        "Initializing database...": "Initializing the database...",
         "LOADING SCREEN": "LOADING SCREEN",
         "Let's choose the unrestored version": "Let's choose the unrestored version",
         "Let's go!": "Let's go!",
@@ -64,7 +64,7 @@
         "OFF": "OFF",
         "ON": "ON",
         "OPEN CONFIGURATOR": "OPEN CONFIGURATOR",
-        "OTHER": "OTHER",
+        "OTHERS": "OTHERS",
         "Petrol or electric car": "Petrol or electric car",
         "Preparing the city...": "Preparing the city...",
         "Price of full car upgrades": "Price of full car upgrades",
@@ -82,14 +82,14 @@
         "Some settings have been changed, save changes?": "Some settings have been changed, save changes?",
         "Start": "Start",
         "TIRE PRESSURE": "TIRE PRESSURE",
-        "There's finally a AUTOSHOW in city, let me show you around?": "There's finally a AUTOSHOW in city, let me show you around?",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "There's finally an AUTOSHOW in city, let me show you around?",
         "This car can be obtained by defeating the boss": "This car can be obtained by defeating the boss",
         "This car cannot be obtained anywhere": "This car cannot be obtained anywhere",
-        "This car could have won the teams championship. In the following seasons:": "This car could have won the teams championship. In the following seasons:",
-        "This car is part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
-        "This is a autoshow - here is collected information about all cars! Let's see": "This is a autoshow - here is collected information about all cars! Let's see",
+        "You could have won this car in the following seasons:": "This car could have won the teams championship. In the following seasons:",
+        "This car is a part of a collection and can be purchased with collection credits.": "This car is part of a collection and can be purchased with collection credits.",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "This is the AUTOSHOW - information about all the cars are collected here! Let's see",
         "This is the podium, the best cars and drivers show off here": "This is the podium, the best cars and drivers show off here",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.",
         "Time": "Time",
         "Total needed:": "Total needed:",
         "UNRESTORED": "UNRESTORED",
@@ -97,10 +97,10 @@
         "Updating the database...": "Updating the database...",
         "WORLD RECORDS": "WORLD RECORDS",
         "WR CAR RATING": "WR CAR RATING",
-        "You can add important cars to your favorites": "You can add important cars to your favorites",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "You can find the car you need by manufacturer or car groups. There is even a favorites section!",
-        "You can go straight to the autoshow, just click on the car!": "You can go straight to the autoshow, just click on the car!",
-        "You can mark the cars you have": "You can mark the cars you have",
+        "You can add important cars to favorites": "You can add important cars to favorites",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "You can find the car you need by manufacturers or car groups. There is even a favorites section!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "You can go straight to the AUTOSHOW, just click on the car!",
+        "You can mark the cars you owned": "You can mark the cars you owned",
         "You can see the visual specs here": "You can see the visual specs here",
         "text coming soon...": "text coming soon..."
     }
