--- a/Localisation/ES.json
+++ b/Localisation/ES.json
@@ -9,24 +9,24 @@
         "ABOUT": "ACERCA",
         "AUDIO": "AUDIO",
         "AUTOSHOW": "AUTOSHOW",
-        "All the best races of the racers go here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
+        "All the best races of the racers are here! Let's see this hall of fame": "¡Las mejores carreras de los corredores están aquí! ¡Veamos este salón de la fama!",
         "And finally, click to see additional information about the car": "Y por último, haz clic para ver información adicional sobre el auto.",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Autoshow <color=#FFD540>PRO</color> mode  (technical info)",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)",
         "Avatar": "Avatar",
         "BACK": "BACK",
         "BEST DRIVER!": "Mejor Conductor!",
         "BEST:": "BEST:",
         "BOSS CAR": "AUTO JEFE",
-        "Basic specs and the car rating at the tier": "Especificaciones básicas y calificación del vehículo por nivel",
+        "Basic specs and the car rating of the tier": "Especificaciones básicas y calificación del vehículo por nivel",
         "Best result and racer. Click to watch the best shift video!": "Mejor resultado y mejor piloto. Haz clic para ver el video.!",
         "Boss time: ": "Tiempo del Jefe: ",
-        "CAR INFO (vision)": "INFORMACION DEL AUTO (vision)",
+        "CAR INFO (from Vision spreadsheet)": "INFORMACION DEL AUTO (vision)",
         "CONFIRM CHANGES": "CONFIRMAR CAMBIOS",
         "CONNECTION FAILED": "CONEXIÓN FALLIDA",
         "CREATORS": "CREADORES",
         "CREDITS": "CREDITOS",
         "Car name": "Nombre del Auto",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Consulta el costos de cada parte, así como las Piezas de Nivel 6!",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Consulta el costos de cada parte, así como las Piezas de Nivel 6!",
         "City camera speed": "Velocidad de Camara",
         "Click here to change the leaderboard!": "Haga clic aquí para cambiar la clasificación!",
         "Click to change car type!": "Haga clic para cambiar el vehículo!",
@@ -38,18 +38,18 @@
         "Effects volume": "Efectos de volumen",
         "FAVORITEs": "FAVORITOS",
         "FINAL DRIVE": "TRANSMISIÓN",
-        "Failed download, check internet connection and restart app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
+        "Download failed, check your internet connection and restart the app": "Descarga fallida, verifique la conexión a Internet he reinicie la aplicación",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Por fin podemos ver a los jugadores más rápidos y sus autos. ¡Acompáñame, te lo mostraré!!",
         "Find out how many elite components you need to fully upgrade your car!": "Descubre cuántos componentes de élite necesitas para actualizar completamente tu auto!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
-        "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "For CSR<color=yellow>2</color>-HUB Será necesario descargar datos: <color= #FFAA0D>{0}</color>, Asegúrese de no estar utilizando internet limitado y confirme la descarga.",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Para el correcto funcionamiento es necesario descargar datos adicionales, por favor verifique su conexión a internet y vuelva a intentarlo.",
         "Gacha imports": "Importaciones",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
+        "Get updated information on how many Legends components you need to restore your car!": "Obtén información actualizada sobre cuántos componentes Legends necesitas para restaurar tu auto!",
         "Get update!": "Obtener actualización!",
-        "Here you can see the best tuning settings": "Aquí puedes ver las mejores configuraciones de ajuste.",
-        "I already know": "ya lo se",
+        "You can see the best tuning settings here": "Aquí puedes ver las mejores configuraciones de ajuste.",
+        "I know it already": "ya lo se",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Inicializando la base de datos...",
+        "Initializing database...": "Inicializando la base de datos...",
         "LOADING SCREEN": "PANTALLA DE CARGA",
         "Let's choose the unrestored version": "Elijamos la versión sin restaurar",
         "Let's go!": "¡Vamos!",
@@ -64,7 +64,7 @@
         "OFF": "Apagar",
         "ON": "Encender",
         "OPEN CONFIGURATOR": "ABRIR",
-        "OTHER": "OTROS",
+        "OTHERS": "OTROS",
         "Petrol or electric car": "Auto de Gasolina o Eléctrico",
         "Preparing the city...": "Preparando la ciudad...",
         "Price of full car upgrades": "Precio de las mejoras completas del auto",
@@ -82,14 +82,14 @@
         "Some settings have been changed, save changes?": "Se han cambiado algunas configuraciones, guardar cambios?",
         "Start": "Comenzar",
         "TIRE PRESSURE": "NEUMÁTICOS",
-        "There's finally a AUTOSHOW in city, let me show you around?": "Por fin hay un AUTOSHOW en la ciudad, déjame mostrarte los alrededores.",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Por fin hay un AUTOSHOW en la ciudad, déjame mostrarte los alrededores.",
         "This car can be obtained by defeating the boss": "Este auto se puede obtener derrotando al jefe.",
         "This car cannot be obtained anywhere": "Este auto no se puede conseguir en ningún lado.",
-        "This car could have won the teams championship. In the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
-        "This car is part of a collection and can be purchased with collection credits.": "Este auto es parte de una colección y se puede comprar con créditos de colección..",
-        "This is a autoshow - here is collected information about all cars! Let's see": "Esto es un autoshow: ¡aquí encontrarás información sobre todos los autos! Veamos.",
+        "You could have won this car in the following seasons:": "Este auto podría haber ganado el campeonato de equipos. En las temporadas siguientes:",
+        "This car is a part of a collection and can be purchased with collection credits.": "Este auto es parte de una colección y se puede comprar con créditos de colección..",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Esto es un autoshow: ¡aquí encontrarás información sobre todos los autos! Veamos.",
         "This is the podium, the best cars and drivers show off here": "Este es el podio, los mejores autos y pilotos se lucen aquí",
-        "Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar.!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.": "¡Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "¡Este proyecto fue creado para automatizar y consolidar la información necesaria para el juego en un solo lugar!\n\nCasi todos los recursos de la aplicación pertenecen al juego CSR2 y son propiedad de NaturalMotion => Zynga => Take-Two Interactive. Los recursos se utilizan únicamente para mostrar información de referencia para la comunidad de jugadores y nada más.",
         "Time": "Tiempo",
         "Total needed:": "Total necesario:",
         "UNRESTORED": "SIN RESTAURAR",
@@ -97,10 +97,10 @@
         "Updating the database...": "Actualización de la base de datos...",
         "WORLD RECORDS": "RÉCORDS MUNDIALES",
         "WR CAR RATING": "WR CLASIFICACIÓN DEL AUTO",
-        "You can add important cars to your favorites": "Puedes agregar autos importantes a tus favoritos",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "Puedes encontrar el auto que necesitas por fabricante o grupo de autos. Incluso hay una sección de favoritos.!",
-        "You can go straight to the autoshow, just click on the car!": "YPuedes ir directamente al autoshow, simplemente haz clic en el auto.!",
-        "You can mark the cars you have": "Puedes marcar los autos que tienes",
+        "You can add important cars to favorites": "Puedes agregar autos importantes a tus favoritos",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Puedes encontrar el auto que necesitas por fabricante o grupo de autos. Incluso hay una sección de favoritos.!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "YPuedes ir directamente al autoshow, simplemente haz clic en el auto.!",
+        "You can mark the cars you owned": "Puedes marcar los autos que tienes",
         "You can see the visual specs here": "Puedes ver las especificaciones visuales aquí",
         "text coming soon...": "texto próximamente..."
     }
