--- a/Localisation/RU.json
+++ b/Localisation/RU.json
@@ -9,24 +9,24 @@
         "ABOUT": "О ПРОЕКТЕ",
         "AUDIO": "АУДИО",
         "AUTOSHOW": "АВТОШОУ",
-        "All the best races of the racers go here! Let's see this hall of fame": "Все лучшие результаты гонщиков находятся здесь! Давай посмотрим на этот зал славы",
+        "All the best races of the racers are here! Let's see this hall of fame": "Все лучшие результаты гонщиков находятся здесь! Давай посмотрим на этот зал славы",
         "And finally, click to see additional information about the car": "Нажми сюда, чтобы увидеть дополнительную информацию об автомобиле",
-        "Autoshow <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
+        "AUTOSHOW <color=#FFD540>PRO</color> mode  (technical info)": "Автошоу <color=#FFD540>ПРО</color> режим  (тех. инфо)",
         "Avatar": "Аватар",
         "BACK": "НАЗАД",
         "BEST DRIVER!": "ЛУЧШИЙ ГОНЩИК!",
         "BEST:": "ЛУЧШИЙ:",
         "BOSS CAR": "МАШИНА БОССА",
-        "Basic specs and the car rating at the tier": "Основные характеристики и рейтинг автомобиля на его этапе",
+        "Basic specs and the car rating of the tier": "Основные характеристики и рейтинг автомобиля на его этапе",
         "Best result and racer. Click to watch the best shift video!": "Лучший гонщик и результат. Нажми, чтобы посмотреть шифт-видео!",
         "Boss time: ": "Время босса: ",
-        "CAR INFO (vision)": "ИСТОРИЯ АВТОМОБИЛЯ (vision)",
+        "CAR INFO (from Vision spreadsheet)": "ИСТОРИЯ АВТОМОБИЛЯ (vision)",
         "CONFIRM CHANGES": "ПОДТВЕРДИТЬ ИЗМЕНЕНИЯ",
         "CONNECTION FAILED": "ОШИБКА СОЕДИНЕНИЯ",
         "CREATORS": "СОЗДАТЕЛИ",
         "CREDITS": "ИНФО",
         "Car name": "Имя автомобиля",
-        "Check out the cost of each part, as well as the effects of the sixth parts!": "Ознакомьтесь со стоимостью каждой части, а также с эффективностью шестых деталей!",
+        "Check out the cost of each part, and the effects of Stage 6 upgrades": "Ознакомьтесь со стоимостью каждой части, а также с эффективностью шестых деталей!",
         "City camera speed": "Чувствительность камеры",
         "Click here to change the leaderboard!": "Нажми здесь, чтобы сменить таблицу лидеров!",
         "Click to change car type!": "Нажми здесь, чтобы изменить состояние автомобиля!",
@@ -36,20 +36,20 @@
         "ELITE STOCK": "ЭЛИТ СТОК",
         "EXIT": "ВЫХОД",
         "Effects volume": "Громкость эффектов",
-        "FAVORITEs": "ИЗБРАННЫЕ",
+        "FAVORITES": "ИЗБРАННЫЕ",
         "FINAL DRIVE": "КОНЕЧНАЯ ПЕРЕДАЧА",
-        "Failed download, check internet connection and restart app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
+        "Download failed, check your internet connection and restart the app": "Ошибка загрузки, проверьте подключение к интеренету и перезапустите приложение",
         "Finally we can see the fastest players and their cars. Come with me, I'll show you!": "Наконец-то мы можем увидеть самых быстрых игроков и их машины. Пойдем посмотрим МИРОВЫЕ РЕКОРДЫ!",
         "Find out how many elite components you need to fully upgrade your car!": "Узнайте, сколько элитных компонентов вам понадобится для полной прокачки вашего автомобиля!",
-        "For CSR<color=yellow>2</color>-HUB will need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet and confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
-        "For the correct work it is necessary to download additional data, please check your internet connection and try again": "Для работы приложения необходимо загрузить дополнительные данные, проверьте свое подключение к интернету и повторите попытку",
+        "CSR<color=yellow>2</color>-HUB need to download data: <color= #FFAA0D>{0}</color>, please make sure you are not using limited internet then confirm download": "CSR<color=yellow>2</color>-HUB необходимо будет загрузить дополнительные данные: <color= #FFAA0D>{0}</color>. Убедитесь в том, что вы подключены к правильной сети - и начните загрузку",
+        "In order to ensure appropriate working, the app requires download of additional data, please check your internet connection and try again": "Для работы приложения необходимо загрузить дополнительные данные, проверьте свое подключение к интернету и повторите попытку",
         "Gacha imports": "Импортные детали",
-        "Get up-to-date information on how many Legends components you need to restore your car!": "Узнайте сколько компонентов Legends вам понадобится для восстановления вашего автомобиля!",
+        "Get updated information on how many Legends components you need to restore your car!": "Узнайте сколько компонентов Legends вам понадобится для восстановления вашего автомобиля!",
         "Get update!": "ОБНОВИТЬ!",
-        "Here you can see the best tuning settings": "Здесь можно увидеть лучшие настройки тюнинга",
-        "I already know": "Я уже знаю",
+        "You can see the best tuning settings here": "Здесь можно увидеть лучшие настройки тюнинга",
+        "I know it already": "Я уже знаю",
         "Infrastructure by ABS (@stasss125)\nResources by Nitro4CSR (@nitr04)\n\nAlso involved:\n- MAINTANERS\n- FREYCKSSON\n": "Инфраструктура приложения - ABS (@stasss125)\nПодготовка ресурсов - Nitro4CSR (@nitr04)\n\nТакже участвуют:\n- MAINTANERS\n- FREYCKSSON\n",
-        "Initializing the database...": "Инициализация базы данных...",
+        "Initializing database...": "Инициализация базы данных...",
         "LOADING SCREEN": "ЗАГРУЗОЧНЫЙ ЭКРАН",
         "Let's choose the unrestored version": "Давай выберем невосстановленный автомобиль",
         "Let's go!": "Погнали!",
@@ -64,7 +64,7 @@
         "OFF": "ВЫКЛ",
         "ON": "ВКЛ",
         "OPEN CONFIGURATOR": "ОТКРЫТЬ КОНФИГУРАТОР",
-        "OTHER": "ДРУГОЕ",
+        "OTHERS": "ДРУГОЕ",
         "Petrol or electric car": "ДВС или электрокар",
         "Preparing the city...": "Подготовка города...",
         "Price of full car upgrades": "Стоимость полной прокачки автомобиля",
@@ -82,14 +82,14 @@
         "Some settings have been changed, save changes?": "Настройки были изменены, сохранить изменения?",
         "Start": "Начать",
         "TIRE PRESSURE": "ДАВЛЕНИЕ В ШИНАХ",
-        "There's finally a AUTOSHOW in city, let me show you around?": "Наконец легендарный АВТОШОУ в городе, пойдем посмотрим?",
+        "There's finally an AUTOSHOW in the city, let me show you around?": "Наконец легендарный АВТОШОУ в городе, пойдем посмотрим?",
         "This car can be obtained by defeating the boss": "Чтобы получить эту машину нужно победить босса",
         "This car cannot be obtained anywhere": "Эту машину нельзя получить",
-        "This car could have won the teams championship. In the following seasons:": "Эта призовая машина чемпионата команд. За следующие сезоны:",
-        "This car is part of a collection and can be purchased with collection credits.": "Этот автомобиль является частью коллекции и может быть приобретен за кредиты коллекций",
-        "This is a autoshow - here is collected information about all cars! Let's see": "Это автошоу - здесь собрана информация обо всех автомобилях! Давай посмотрим",
+        "You could have won this car in the following seasons:": "Эта призовая машина чемпионата команд. За следующие сезоны:",
+        "This car is a part of a collection and can be purchased with collection credits.": "Этот автомобиль является частью коллекции и может быть приобретен за кредиты коллекций",
+        "This is the AUTOSHOW - information about all the cars are collected here! Let's see": "Это автошоу - здесь собрана информация обо всех автомобилях! Давай посмотрим",
         "This is the podium, the best cars and drivers show off here": "Это подиум, здесь красуются самые быстрые автомобили и гонщики",
-        "This project was created to automate and consolidate the necessary information for the game in one place!\n\nAlmost all the resources of the application belong to the game CSR2 and are the property of NaturalMotion => Zynga => Take-Two Interactive. The resources are used only to display reference information for the gaming community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
+        "This project was created to automate and gather the necessary information for the game in one place!\n\nAlmost all the resources of the application belongs to the game CSR2 and are the properties of NaturalMotion => Zynga => Take-Two Interactive. The resources used are to only display reference information for the community and nothing more.": "Данный проект создан для автоматизации и визуализации необходимой для игры информации в одном месте!\r\n\r\nПрактически все ресурсы приложения принадлежат игре CSR2 и являются собственностью NaturalMotion => Zynga => Take-Two Interactive. Ресурсы используются только для отображения справочной информации для игрового сообщества и не более того.",
         "Time": "Время",
         "Total needed:": "Всего необходимо:",
         "UNRESTORED": "НЕВОССТАНОВЛЕННЫЙ",
@@ -97,10 +97,10 @@
         "Updating the database...": "Обновление базы данных...",
         "WORLD RECORDS": "МИРОВЫЕ РЕКОРДЫ",
         "WR CAR RATING": "МИРОВОЙ РЕЙТИНГ",
-        "You can add important cars to your favorites": "Можно добавлять важные автомобили в избранное",
-        "You can find the car you need by manufacturer or car groups. There is even a favorites section!": "Можно найти нужную машину по производителю или группам автомобилей. Есть даже раздел избранного!",
-        "You can go straight to the autoshow, just click on the car!": "Ты можешь сразу перейти в АВТОШОУ, просто кликнув на машину!",
-        "You can mark the cars you have": "Можно отметить имеющиеся автомобили",
+        "You can add important cars to favorites": "Можно добавлять важные автомобили в избранное",
+        "You can find the car you need by manufacturers or car groups. There is even a favorites section!": "Можно найти нужную машину по производителю или группам автомобилей. Есть даже раздел избранного!",
+        "You can go straight to the AUTOSHOW, just click on the car!": "Ты можешь сразу перейти в АВТОШОУ, просто кликнув на машину!",
+        "You can mark the cars you owned": "Можно отметить имеющиеся автомобили",
         "You can see the visual specs here": "Визуальные хар-ки можно посмотреть здесь",
         "text coming soon...": "текст в разработке..."
     }
